@@ -1,3 +1,7 @@
+2007-10-17  Andreas Schmitz <schmitz@lat-lon.de>
+		src/de/latlon/deejump/plugin/wfs/WFSPanel.java:
+		Sending srsName attribute with Queries.
+
 2007-10-16  Andreas Schmitz <schmitz@lat-lon.de>
         src/de/latlon/deejump/plugin/wfs/TransactionFactory.java,
         src/de/latlon/deejump/plugin/wfs/WFSPanel.java:
